--- a/.github/workflows/azure-webapp.yml
+++ b/.github/workflows/azure-webapp.yml
@@ -14,6 +14,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    environment: SIH
 
     steps:
       - name: Checkout repository
@@ -45,6 +46,15 @@ jobs:
         run: |
           cd backend
           zip -r ../release.zip . -x "**/node_modules/.cache/**"
+
+      - name: Validate required secrets/vars
+        run: |
+          if [ -z "${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}" ]; then
+            echo "AZURE_WEBAPP_PUBLISH_PROFILE secret is missing or not visible to this job." && exit 1;
+          fi
+          if [ -z "${{ env.WEBAPP_NAME }}" ]; then
+            echo "AZURE_WEBAPP_NAME variable is missing." && exit 1;
+          fi
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
