--- a/backend/.env
+++ b/backend/.env
@@ -5,13 +5,16 @@ AZURE_SQL_DATABASE=SIH
 # Azure AD Authentication (REQUIRED - Your Azure AD credentials)
 AZURE_AD_USERNAME=pushkar.waykole@vit.edu.in
 AZURE_AD_PASSWORD=Pushu@1702
+NODE_ENV=development
+
+
 
 # Email Configuration
 EMAIL_USER=arpitthombe2005@gmail.com
 EMAIL_PASS=cqar uvdz dbcd bmon
 
 # Frontend URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173
 
 # Server Port
 PORT=5000
